# MiniLang

./: .ocamlformat  COMPILER.md  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTION_LEVEL_LIVENESS.md  MiniImp  MiniLang.opam  README.md  REGISTER_ALLOCATION.md  TEST_QUICK_REFERENCE.md  TEST_SUITE_README.md  doc  dune-project  run_all_tests.sh  test.risc  test_compiler.sh  test_register_allocation.sh
_build/: .db  .digest-db  log
_build/default/lib/.formatted/: dune  miniImpEval.ml
docs/: master.aux  master.fdb_latexmk  master.fls  master.tex  master.toc
example/: interpreter.ml
examples/: factorial.minifun  no_input.minifun  optimization_test.minimp  simple.minimp
lib/: dune  miniFunAST.ml  miniFunLexer.mll  miniFunParser.mly  miniImpInterpreter.ml  miniImpParser.mly  miniImpTypes.ml
lib/cfg/miniImp/: miniImpBlock.ml
lib/cfg/miniRisc/: miniRiscBlock.ml
lib/miniFun/: MiniFunEval.ml  MiniFunLexer.mll  MiniFunParser.mly  MiniFunSyntax.ml  MiniTyFunSyntax.ml  MiniTyFunTypeCheck.ml  dune
lib/miniImp/: MiniImpCFG.ml  MiniImpEval.ml  MiniImpLexer.mll  MiniImpParser.mly  MiniImpSyntax.ml
lib/miniRISC/: DataflowAnalysis.ml  MiniImpToRISC.ml  MiniRISCAllocation.ml  MiniRISCCFG.ml  MiniRISCDataflow.ml  MiniRISCLinearize.ml  MiniRISCOptimization.ml  MiniRISCSyntax.ml  MiniRISCTranslation.ml  MiniRISCUtils.ml  dune
test_ex/: minirisc  test.risc  test_0.minimp  test_1.minimp  test_10.minimp  test_11.minimp  test_12.minimp  test_13.minimp  test_14.minimp  test_15.minimp  test_16.minimp  test_2.minimp  test_3.minimp  test_4.minimp  test_5.minimp  test_6.minimp  (+29 more)
(+205 files in other folders)
