(include_subdirs unqualified)

(library
 (name MiniLang)
 (preprocess
  (pps ppx_deriving.show))
 (modules
  MiniImpSyntax
  MiniImpEval
  MiniImpParser
  MiniImpLexer
  MiniImpCFG
  MiniFunSyntax
  MiniFunEval
  MiniFunParser
  MiniFunLexer
  MiniTyFunSyntax
  MiniTyFunTypeCheck
  MiniRISCSyntax
  MiniRISCUtils
  MiniRISCCFG
  DataflowAnalysis
  MiniRISCOptimization
  MiniImpToRISC
  MiniRISCLinearize))
